--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/armylathe.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Lathe/armylathe.yml
@@ -1,12 +1,9 @@
 - type: entity
-  parent: [ BaseMachinePowered, RMCConstructibleMachine ]
+  parent: CMAutolathe
   id: CMArmylathe
   name: armylathe
   description: The armylathe is a specialized USCM autolathe meant for printing parts to construct various ordnance, such as grenade casings and mortar shells.
   components:
-  - type: ApcPowerReceiver
-    powerLoad: 0
-    needsPower: false
   - type: Sprite
     sprite: _RMC14/Structures/Machines/armylathe.rsi
     layers:
@@ -17,19 +14,6 @@
       map: ["enum.PowerDeviceVisualLayers.Powered"]
     - state: armylathe_t
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
-  - type: Appearance
-  - type: WiresVisuals
-  - type: Fixtures
-    fixtures:
-      fix1:
-        shape:
-          !type:PhysShapeAabb
-          bounds: "-0.5,-0.5,0.5,0.5"
-        density: 190
-        mask:
-        - MachineMask
-        layer:
-        - MachineLayer
   - type: Lathe
     idleState: armylathe
     runningState: armylathe_n
@@ -51,39 +35,8 @@
       - RMCTablePartMetalReinforced
       - RodMetal1
       - Plastic
-  - type: Destructible
-    thresholds:
-    - trigger:
-        !type:DamageTrigger
-        damage: 400
-      behaviors:
-      - !type:PlaySoundBehavior
-        sound:
-          collection: MetalBreak
-      - !type:ChangeConstructionNodeBehavior
-        node: machineFrame
-      - !type:DoActsBehavior
-        acts: ["Destruction"]
-  - type: WiresPanel
-  - type: ActivatableUI
-    key: enum.LatheUiKey.Key
-  - type: ActivatableUIRequiresPower
-  - type: UserInterface
-    interfaces:
-      enum.LatheUiKey.Key:
-        type: LatheBoundUserInterface
-      enum.ResearchClientUiKey.Key:
-        type: ResearchClientBoundUserInterface
-  - type: Transform
-    anchored: true
-  - type: Anchorable
-    flags: None
-  - type: StaticPrice
-    price: 800
   - type: Machine
     board: RMCArmylatheMachineCircuitboard
-  - type: Corrodible
-    isCorrodible: false
 
 - type: entity
   parent: CMArmylathe
