--- a/Resources/Prototypes/_RMC14/Entities/Objects/Devices/EncryptionKeys/marine.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Devices/EncryptionKeys/marine.yml
@@ -130,3 +130,17 @@
     defaultChannel: MarineForecon
   - type: Sprite
     state: sl_key
+
+# PVE
+
+- type: entity
+  parent: CMEncryptionKey
+  id: RMCEncryptionKeySunRiders
+  name: sun riders encryption key
+  components:
+  - type: EncryptionKey
+    channels:
+    - MarineSunRider
+    defaultChannel: MarineSunRider
+  - type: Sprite
+    state: delta_key
