Revert "Base spec has AN icon, but it's just a cube the color of their squad."
This reverts commit 64c2c5c7e8801a9feb23fb3f3d56e13f4e5deeac.

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/weapons_specialist.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/weapons_specialist.yml
@@ -20,7 +20,7 @@
     RMCRankLanceCorporal: []
   startingGear: CMGearWeaponsSpecialist
   dummyStartingGear: CMGearWeaponsSpecialistEquipped
-  icon: "CMJobIconEmpty"
+  icon: "CMJobIconWeaponsSpecialist"
   joinNotifyCrew: false
   supervisors: cm-job-supervisors-sl
   accessGroups:
