fix Exec Spec not being in we-ya faction

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/corporate_executives.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/corporate_executives.yml
@@ -84,6 +84,9 @@
   special:
   - !type:AddComponentSpecial
     components:
+    - type: NpcFactionMember
+      factions:
+      - WeYa
     - type: Skills
       skills:
         RMCSkillConstruction: 1
