--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/rifleman.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/rifleman.yml
@@ -3,6 +3,7 @@
   id: RMCSurvivorForeconRifleman
   name: cm-job-name-rifleman
   playTimeTracker: RMCJobSurvivorRiflemanForecon
+  icon: "RMCJobIconForeconRifleman"
   spawnMenuRoleName: FORECON Rifleman (Survivor)
   special:
   - !type:AddComponentSpecial
@@ -47,3 +48,10 @@
     job_id: RMCSurvivorForeconRifleman
   - type: Sprite
     state: marine_spawn
+
+- type: jobIcon
+  parent: CMJobIconBase
+  id: RMCJobIconForeconRifleman
+  icon:
+    sprite: _RMC14/Interface/cm_job_icons.rsi
+    state: hudsquad_rifleman
