--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/support_technician.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/support_technician.yml
@@ -35,7 +35,7 @@
     - type: EquipSurvivorPreset
       preset: RMCSurvivorPresetForeconSupportTech
     - type: JobPrefix
-      prefix: rmc-job-prefix-forecon
+      prefix: rmc-job-prefix-forecon-support-tech
   hidden: true
 
 - type: playTimeTracker
