--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/smart_gun_operator.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/smart_gun_operator.yml
@@ -35,7 +35,7 @@
     - type: EquipSurvivorPreset
       preset: RMCSurvivorPresetForeconNoPistol
     - type: JobPrefix
-      prefix: rmc-job-prefix-forecon
+      prefix: cm-job-prefix-gun-operator
   hidden: true
 
 - type: playTimeTracker
