--- a/Resources/Prototypes/_RMC14/Reagents/medicine.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/medicine.yml
@@ -14,32 +14,50 @@
         damage:
         - Toxin: -1
         - Genetic: -1 # TODO RMC14 remove once other meds are in for genetic damage
+      - !type:GenericStatusEffect # TODO -5 hallucination/s
+        key: SeeingRainbows
+        component: SeeingRainbows
+        time: 5
+        type: Remove
+      - !type:AdjustReagent
+        conditions:
+        - !type:ReagentThreshold
+          reagent: RMCMindbreakerToxin
+          min: 1
+        reagent: RMCMindbreakerToxin
+        amount: -2.5
+      - !type:AdjustReagent
+        conditions:
+        - !type:ReagentThreshold
+          reagent: RMCSpaceDrugs
+          min: 1
+        reagent: RMCSpaceDrugs
+        amount: -2.5
       - !type:HealthChange
         conditions:
         - !type:ReagentThreshold
-          min: 30
+          min: 30 #TODO 0.5 eye damage/s
         damage:
           groups:
-            Brute: 1
-      - !type:Jitter
+            Toxin: 0.5
+      - !type:HealthChange
         conditions:
         - !type:ReagentThreshold
           min: 50
-      - !type:PopupMessage
-        conditions:
-        - !type:ReagentThreshold
-          min: 50
-        type: Local
-        visualType: Medium
-        messages: [ "generic-reagent-effect-nauseous" ]
-        probability: 0.2
+        damage:
+          groups:
+            Brute: 0.5
+            Burn: 0.5
+            Toxin: 1.5
       - !type:GenericStatusEffect
         conditions:
         - !type:ReagentThreshold
           min: 50
-        key: Drunk
-        component: Drunk
-        time: 60
+        key: Unconscious
+        component: RMCUnconscious
+        probability: 0.05
+        time: 5
+        refresh: true
         type: Add
 
 # TODO RMC14 other effects
@@ -582,3 +600,62 @@
         - Toxin: -3.75
         - Brute: -2.25
         - Burn: -3
+
+# Antidepressants
+- type: reagent
+  parent: CMReagentMedicine
+  id: RMCMethylphenidate
+  name: reagent-name-rmcmethylphenidate
+  desc: reagent-desc-rmcmethylphenidate
+  physicalDesc: reagent-physical-desc-crystalline
+  flavor: medicine
+  color: "#C8A5DC"
+  metabolisms:
+    Medicine:
+      metabolismRate: 0.01 # 1, 200 seconds is 0.005, but fixed point 2
+      effects:
+      - !type:PopupMessage #TODO -2 confusion stat and message in 5 min intervals
+        type: Local
+        messages: [ "antidepressant-effect-rmcmethylphenidate" ]
+        probability: 0.05
+
+- type: reagent
+  parent: RMCMethylphenidate
+  id: RMCCitalopram
+  name: reagent-name-rmccitalopram
+  desc: reagent-desc-rmccitalopram
+  color: "#C8A5DC"
+  metabolisms:
+    Medicine:
+      metabolismRate: 0.01 # 1, 200 seconds
+      effects:
+      - !type:PopupMessage #TODO -1 confusion stat and message in 5 min intervals
+        type: Local
+        messages: [ "antidepressant-effect-rmccitalopram" ]
+        probability: 0.05
+
+- type: reagent
+  parent: RMCMethylphenidate
+  id: RMCParoxetine
+  name: reagent-name-rmcparoxetine
+  desc: reagent-desc-rmcparoxetine
+  color: "#C8A5DC"
+  metabolisms:
+    Medicine:
+      metabolismRate: 0.01 # 1, 200 seconds
+      effects:
+      - !type:PopupMessage #TODO -3 confusion stat and message in 5 min intervals
+        type: Local
+        messages: [ "antidepressant-effect-rmcparoxetine" ]
+        probability: 0.05
+      - !type:GenericStatusEffect
+        key: SeeingRainbows
+        component: SeeingRainbows
+        type: Add
+        time: 1.5 #TODO max 30
+        refresh: false
+      - !type:Jitter
+      - !type:Emote
+        emote: Laugh #TODO twitches, drools, moans.
+        showInChat: true
+        probability: 0.05
