--- a/Resources/Prototypes/_RMC14/Reagents/medicine.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/medicine.yml
@@ -258,6 +258,13 @@
       - !type:EqualHealthChange
         damage:
         - Airloss: -1
+      - !type:AdjustReagent
+        conditions:
+        - !type:ReagentThreshold
+          reagent: RMCLexorin
+          min: 0.5
+        reagent: RMCLexorin
+        amount: -1
       - !type:HealthChange
         conditions:
         - !type:ReagentThreshold
@@ -288,6 +295,13 @@
       effects:
       - !type:RemoveDamage
         group: Airloss
+      - !type:AdjustReagent
+        conditions:
+        - !type:ReagentThreshold
+          reagent: RMCLexorin
+          min: 0.5
+        reagent: RMCLexorin
+        amount: -1.5
       - !type:HealthChange
         conditions:
         - !type:ReagentThreshold
