--- a/Resources/Prototypes/_RMC14/Entities/Objects/Medical/pill_canisters.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Medical/pill_canisters.yml
@@ -216,4 +216,25 @@
   - type: IconLabel
     labelTextLocId: rmc-tricordazine-container-label-text
 
+- type: entity
+  parent: CMPillCanister
+  id: RMCPillCanisterRussianRed
+  name: Russian red pill bottle
+  suffix: Russian Red, 16
+  components:
+  - type: Sprite
+    layers:
+    - state: pill_canister
+      map: [ "bottleSurfaceLayer" ]
+    - state: open
+      map: [ "openLayer" ]
+    - state: closed
+      map: [ "closedLayer" ]
+  - type: StorageFill
+    contents:
+    - id: RMCPillRussianRed
+      amount: 16
+  - type: IconLabel
+    labelTextLocId: rmc-russianred-container-label-text
+
 # TODO RMC14 peridaxon, tramadol
