--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
@@ -332,7 +332,7 @@
     CMShellShotgunBeanbag: 20
     CMFirstAidKitFilled: 2
     CMBurnAidKitFilled: 2
-    #MedkitRadiationFilled: 1 #firstaid rad 1
+    RMCRadiationAidKitFilled: 1
     # Crew Monitor
 
 
