we are all weebs at heart

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Back/scabbards.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Back/scabbards.yml
@@ -90,7 +90,7 @@
   - type: ItemSlots
     slots:
       item:
-        name: Ngájhe
+        name: M2100
         insertVerbText: sheath-insert-verb
         ejectVerbText: sheath-eject-verb
         insertSound: /Audio/_RMC14/Weapons/Guns/gun_rifle_draw.ogg
@@ -107,7 +107,7 @@
   - type: Tag
     tags:
     - Scabbard
-    - RMCMacheteScabbardM2100
+    - RMCMacheteScabbard
 
 - type: entity
   parent: RMCScabbardMacheteM2100
@@ -231,6 +231,64 @@
       item:
       - RMCCeremonialSword
 
+- type: entity
+  parent: RMCScabbardBase
+  id: RMCScabbardKatana
+  name: katana scabbard
+  description: A large, vibrantly colored katana scabbard used to carry a Japanese sword. It can be strapped to the back or worn at the belt. Because of the sturdy wood casing of the scabbard, it makes an okay defensive weapon in a pinch.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Back/Scabbards/katana_sheath.rsi
+    state: sheath
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Back/Scabbards/katana_sheath.rsi
+    quickEquip: false
+    slots:
+    - back
+    - belt
+    - suitstorage
+  - type: ItemSlots
+    slots:
+      item:
+        name: Katana
+        insertVerbText: sheath-insert-verb
+        ejectVerbText: sheath-eject-verb
+        insertSound: /Audio/_RMC14/Weapons/Guns/gun_rifle_draw.ogg
+        ejectSound: /Audio/_RMC14/Weapons/Guns/gun_rifle_draw.ogg
+        whitelist:
+          tags:
+          - RMCKatana
+  - type: ItemMapper
+    mapLayers:
+      sheath-katana:
+        whitelist:
+          tags:
+          - RMCKatana
+  - type: Tag
+    tags:
+    - Scabbard
+    - RMCScabbardKatana
+
+- type: entity
+  parent: RMCScabbardKatana
+  id: RMCScabbardKatanaFilled
+  suffix: Filled
+  components:
+  - type: ContainerFill
+    containers:
+      item:
+      - RMCKatana
+
+- type: entity
+  parent: RMCScabbardKatana
+  id: RMCScabbardKatanaSharpFilled
+  suffix: Admeme, Filled
+  components:
+  - type: ContainerFill
+    containers:
+      item:
+      - RMCKatanaSharp
+
 - type: Tag
   id: RMCShotgunScabbard
 
@@ -238,4 +296,4 @@
   id: RMCCeremonialScabbard
 
 - type: Tag
-  id: RMCMacheteScabbardM2100
+  id: RMCScabbardKatana
