--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/bundles.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/bundles.yml
@@ -160,7 +160,7 @@
     - CMSynthGraft
     - CMSurgicalCaseFilled
     - RMCFlashlightPen
-#   - Syringe case # TODO RMC14 syringe cases
+    - RMCSyringeCase
 
 - type: entity
   parent: CMVendorBundleRiflemanApparel
