--- a/Resources/Prototypes/_RMC14/Entities/Objects/Tools/bucket.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Tools/bucket.yml
@@ -94,7 +94,7 @@
 
 - type: entity
   parent: RMCBucket
-  id: CMBucketJani
+  id: RMCBucketJanitorial
   name: janitorial bucket
   description: It's a large bucket that fits in a janitorial cart. Holds 500 units.
   components:
@@ -106,10 +106,12 @@
       state: janibucket-1
       visible: false
   - type: Item
-    size: Large
+    size: Normal
   - type: SolutionContainerVisuals
     fillBaseName: janibucket-
   - type: SolutionContainerManager
     solutions:
       bucket:
         maxVol: 500
+  - type: FitsInDispenser
+    solution: bucket
