--- a/Resources/Prototypes/_RMC14/Entities/skills.yml
+++ b/Resources/Prototypes/_RMC14/Entities/skills.yml
@@ -97,6 +97,9 @@
   id: RMCSkillMedical
   name: Medical
   categories: [ HideSpawnMenu ]
+  components:
+  - type: SkillDefinition
+    delayMultipliers: [ 1, 1, 1, 0.75, 0.5 ]
 
 - type: entity
   parent: RMCSkillBase
