--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/storage.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/storage.yml
@@ -306,6 +306,14 @@
   components:
   - type: Sprite
     sprite: _RMC14/Objects/Clothing/Pouches/medium_shotshells.rsi
+    layers:
+    - state: icon
+    - state: half
+      visible: false
+      map: [ "halfLayer" ]
+    - state: full
+      visible: false
+      map: [ "fullLayer" ]
   - type: Storage
     grid:
     - 0,0,9,1 #5 slots
@@ -322,7 +330,20 @@
     tags:
     - Pouch
     - RMCPouchShotgunShells
-
+  - type: ItemMapper
+    mapLayers:
+      halfLayer:
+        minCount: 1
+        whitelist:
+          tags:
+          - RMCShellShotgun
+          - RMCCartridge458SOCOM
+      fullLayer:
+        minCount: 5
+        whitelist:
+          tags:
+          - RMCShellShotgun
+          - RMCCartridge458SOCOM
 
 # Large Shotgun Shell Pouch
 - type: entity
