--- a/Resources/Prototypes/_RMC14/Catalog/Fills/Lockers/marine.yml
+++ b/Resources/Prototypes/_RMC14/Catalog/Fills/Lockers/marine.yml
@@ -5,3 +5,25 @@
     - id: CMBootsBlackFilled
     - id: JumpsuitMarine
     - id: RMCHeadsetGoldenArrow
+
+- type: entityTable
+  id: RMCClosetGoldenArrowSLFill
+  table: !type:AllSelector
+    children:
+    - id: CMArmorHelmetM11
+    - id: RMCLaserDesignator
+    - id: RMCWhistle
+
+- type: entityTable
+  id: RMCClosetGoldenArrowSGOFill
+  table: !type:AllSelector
+    children:
+    - id: RMCSmartGun
+    - id: RMCPowerCellSmartgun
+    - id: CMArmorSmartGunCombatHarness
+    - id: RMCBeltSmartGunOperatorPistolFilled
+    - id: RMCMagazineSmartGun
+    - id: RMCMagazineSmartGun
+    - id: RMCGlassesSmartGunSight
+    - id: RMCWebbingClipOnPouch
+    - id: RMCWebbingGrenade
