--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/lockers.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/lockers.yml
@@ -365,6 +365,10 @@
   components:
   - type: AccessReader
     access: [["CMAccessSquadLeaderPrep"]]
+  - type: EntityTableContainerFill
+    containers:
+      entity_storage: !type:NestedSelector
+        tableId: RMCClosetGoldenArrowSLFill
 
 - type: entity
   parent: CMLockerBase
@@ -373,8 +377,22 @@
   components:
   - type: AccessReader
     access: [["CMAccessSmartPrep"]]
+  - type: EntityTableContainerFill
+    containers:
+      entity_storage: !type:NestedSelector
+        tableId: RMCClosetGoldenArrowSGOFill
 
 - type: entity
   parent: RMCLockerSmartGunOperatorOne
   id: RMCLockerSmartGunOperatorTwo
   name: squad two smartgun operator locker
+
+- type: entity
+  parent: RMCLockerSmartGunOperatorOne
+  id: RMCLockerSmartGunOperatorThree
+  name: squad three smartgun operator locker
+
+- type: entity
+  parent: RMCLockerSmartGunOperatorOne
+  id: RMCLockerSmartGunOperatorFour
+  name: squad four smartgun operator locker
