--- a/Resources/Prototypes/_RMC14/Entities/Areas/areas_ert.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Areas/areas_ert.yml
@@ -62,7 +62,7 @@
 
 - type: entity
   parent: RMCAreaShuttleNS
-  id: RMCAreaShuttleERT #Not Sulaco
+  id: RMCAreaShuttleERT
   name: ERT Shuttle
   components:
   - type: Sprite
