--- a/Resources/Prototypes/_RMC14/Entities/Structures/Furniture/chairs.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Furniture/chairs.yml
@@ -72,6 +72,15 @@
     state: comfychair_ares
 
 - type: entity
+  parent: CMChairComfyARES
+  id: RMCChairComfyAI
+  name: AI interface chair
+  suffix: AI
+  components:
+  - type: Sprite
+    state: ai_interface_chair
+
+- type: entity
   parent: CMChairComfy
   id: CMChairComfyBeige
   suffix: Beige
