Update 1984 Weapon Case
Updates the MP 1984 Weapon case to provide 6 AP magazines, in line with other offerings.

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Cases/gun_cases.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Cases/gun_cases.yml
@@ -130,13 +130,14 @@
     whitelist:
       tags:
       - CMWeaponPistolM1984
+      - RMCMagazinePistolM1984AP
       - CMMagazinePistolM1984
       - RMCAttachmentRailFlashlight
   - type: StorageFill
     contents:
     - id: RMCAttachmentRailFlashlight
     - id: CMWeaponPistolM1984
-    - id: CMMagazinePistolM1984
+    - id: RMCMagazinePistolM1984AP
       amount: 6
 
 # RSh9 Assault Revolver
