--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/bundles.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/bundles.yml
@@ -144,7 +144,7 @@
 
 - type: entity
   parent: CMVendorBundleRiflemanApparel
-  id: CMVendorBundleCrewMedicalEssentialsNurse
+  id: RMCVendorBundleCrewMedicalEssentialsNurse
   name: essential medical set
   description: Contains a defibrillator, a first-aid kit, medical tools and a flashlight.
   components:
@@ -161,6 +161,27 @@
     - CMSurgicalCaseFilled
     - RMCFlashlightPen
     - RMCSyringeCase
+      #TODO RMC Stethoscope
+
+- type: entity
+  parent: CMVendorBundleRiflemanApparel
+  id: RMCVendorBundleCrewMedicalEssentialsDoctor
+  name: essential medical set
+  description: Contains a defibrillator, a first-aid kit, medical tools and a flashlight.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Medical/defib.rsi
+    state: defib
+  - type: CMVendorBundle
+    bundle:
+    - CMDefibrillator
+    - CMAdvFirstAidKitFilled
+    - CMHealthAnalyzer
+    - CMSurgicalLine
+    - CMSynthGraft
+    - RMCFlashlightPen
+    - RMCSyringeCase
+      #TODO RMC Stethoscope
 
 - type: entity
   parent: CMVendorBundleRiflemanApparel
