--- a/Resources/Prototypes/_RMC14/Entities/Objects/Medical/syringe_case.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Medical/syringe_case.yml
@@ -45,3 +45,80 @@
     - id: CMSyringe
     - id: CMBottleInaprovaline
     - id: CMBottleTricordrazine
+
+- type: entity
+  parent: RMCSyringeCase
+  id: RMCSyringeCaseFilledBurn
+  suffix: Burn, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: CMSyringe
+    - id: CMBottleKelotane
+    - id: CMBottleTricordrazine
+
+- type: entity
+  parent: RMCSyringeCase
+  id: RMCSyringeCaseFilledToxin
+  suffix: Toxin, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: CMSyringe
+    - id: CMBottleDylovene
+    - id: CMBottleDylovene
+
+- type: entity
+  parent: RMCSyringeCase
+  id: RMCSyringeCaseFilledOxygen
+  suffix: Oxygen, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: CMSyringe
+    - id: CMBottleInaprovaline
+    - id: CMBottleDexalin
+
+- type: entity
+  parent: RMCSyringeCase
+  id: RMCSyringeCaseFilledRCM
+  suffix: RCM, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: #TODO oxycodone autoinjector
+    - id: #TODO oxycodone autoinjector
+    - id: #TODO oxycodone autoinjector
+
+- type: entity
+  parent: RMCSyringeCase
+  id: RMCSyringeCaseFilledWhiteout
+  suffix: Whiteout, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: #TODO redemption stimulant autoinjector
+    - id: CMEmergencyAutoInjector
+    - id: #TODO oxycodone autoinjector
+
+- type: entity
+  parent: RMCSyringeCase
+  id: RMCSyringeCaseFilledPMC
+  suffix: PMC, Filled
+  components:
+  - type: StorageFill
+    contents:
+    - id: #TODO ultrazine autoinjector
+    - id: CMInaprovalineAutoInjector
+    - id: CMEpinephrineAutoInjector
+
+- type: entity
+  parent: RMCSyringeCase
+  id: RMCSyringeCaseFilledPMCLooted
+  suffix: PMC, Looted
+  components:
+  - type: StorageFill
+    contents:
+    - id: #TODO ultrazine autoinjector EMPTY
+    - id: CMInaprovalineAutoInjector
+    - id: CMEpinephrineAutoInjector
