--- a/Resources/Prototypes/_RMC14/Entities/Objects/Medical/syringe_case.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Medical/syringe_case.yml
@@ -108,7 +108,7 @@
   components:
   - type: StorageFill
     contents:
-    - id: #TODO ultrazine autoinjector
+#    - id: #TODO ultrazine autoinjector
     - id: CMInaprovalineAutoInjector
     - id: CMEpinephrineAutoInjector
 
