--- a/Resources/Prototypes/_RMC14/Entities/Objects/Medical/syringe_case.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Medical/syringe_case.yml
@@ -119,6 +119,6 @@
   components:
   - type: StorageFill
     contents:
-    - id: #TODO ultrazine autoinjector EMPTY
+#    - id: #TODO ultrazine autoinjector EMPTY
     - id: CMInaprovalineAutoInjector
     - id: CMEpinephrineAutoInjector
