updated pizza recipe to make RMC Hawaiian pizza

--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -692,7 +692,7 @@
 - type: microwaveMealRecipe
   id: RecipeHawaiianPizza
   name: Hawaiian pizza recipe
-  result: FoodPizzaPineapple
+  result: RMCFoodPizzaHawaiianFull #Changed for RMC
   time: 30
   group: Pizza
   solids:
