--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -1155,3 +1155,10 @@ CMPosterWalkman: RMCPosterCassettePlayer
 
 # 2025-05-24
 Katana: RMCKatana
+
+# 2025-06-7
+DrinkWhiskeyBottleFull: RMCDrinkAlcoholWhiskey
+DrinkWineBottleFull: RMCDrinkAlcoholPurpleWine
+DrinkVodkaBottleFull: RMCDrinkAlcoholVodka
+DrinkVermouthBottleFull: RMCDrinkAlcoholVermouth
+DrinkSakeBottleFull: RMCDrinkAlcoholSake
