--- a/Resources/Prototypes/_RMC14/Entities/Objects/Tools/bucket.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Tools/bucket.yml
@@ -115,3 +115,21 @@
         maxVol: 500
   - type: FitsInDispenser
     solution: bucket
+  - type: SolutionTransfer
+    transferAmount: 100
+    minTransferAmount: 5
+    maxTransferAmount: 500
+    transferAmounts:
+    - 5
+    - 10
+    - 15
+    - 20
+    - 25
+    - 30
+    - 40
+    - 60
+    - 80
+    - 100
+    - 120
+    - 300
+    - 500
