--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Pistols/m1984_pistol.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Pistols/m1984_pistol.yml
@@ -30,6 +30,7 @@
           tags:
           - CMMagazinePistolM1984
           - RMCMagazinePistolM1984AP
+          - RMCMagazinePistolM1984HP
           - RMCMagazinePistolM1984Rubber
         startingItem: CMMagazinePistolM1984
   - type: AttachableHolder
@@ -77,6 +78,7 @@
           tags:
           - CMMagazinePistolM1984
           - RMCMagazinePistolM1984AP
+          - RMCMagazinePistolM1984HP
 
 #9mm
 - type: entity
@@ -146,7 +148,74 @@
       tags:
       - CMCartridgePistol9mmAP
     proto: CMCartridgePistolM77AP
-  # Todo AP magazine sprite
+  - type: Sprite
+    sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Magazines/m1984.rsi
+    layers:
+    - state: base
+      map: ["enum.GunVisualLayers.Base"]
+    - state: mag-1
+      map: ["enum.GunVisualLayers.Mag"]
+    - state: ammo_band
+      color: "#1F951F"
+
 
 - type: Tag
   id: RMCMagazinePistolM1984AP
+
+- type: entity
+  parent: CMBaseMagazinePistol
+  id: RMCMagazinePistolM1984HP
+  name: M1984 HP magazine (9mm)
+  description: A pistol magazine. This one contains hollow-point bullets. More effect against unarmored targets.
+  components:
+  - type: Tag
+    tags:
+    - CMMagazinePistol
+    - RMCMagazinePistolM1984HP
+  - type: BallisticAmmoProvider
+    mayTransfer: True
+    whitelist:
+      tags:
+      - RMCCartridgePistol9mmHP
+    proto: RMCCartridgePistol9mmHP
+    capacity: 12
+  - type: Sprite
+    sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Magazines/m1984.rsi
+    layers:
+    - state: base
+      map: ["enum.GunVisualLayers.Base"]
+    - state: mag-1
+      map: ["enum.GunVisualLayers.Mag"]
+    - state: ammo_band
+      color: "#9C4E00"
+
+- type: Tag
+  id: RMCMagazinePistolM1984HP
+
+- type: entity
+  parent: CMBulletBase
+  id: RMCBulletPistol9mmHP
+  name: bullet (9mm Hollow Point)
+  components:
+  - type: Projectile
+    damage:
+      types:
+        Piercing: 55
+  - type: CMArmorPiercing
+    amount: 0
+- type: Tag
+  id: RMCBulletPistol9mmHP
+
+- type: entity
+  id: RMCCartridgePistol9mmHP
+  name: cartridge (9mm Hollow Point)
+  parent: CMCartridgePistolBase
+  components:
+  - type: Tag
+    tags:
+    - Cartridge
+    - RMCCartridgePistol9mmHP
+  - type: CartridgeAmmo
+    proto: RMCBulletPistol9mmHP
+- type: Tag
+  id: RMCCartridgePistol9mmHP
