--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/vulpkanin.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/vulpkanin.yml
@@ -46,6 +46,8 @@
       - map: [ "enum.HumanoidVisualLayers.LLeg" ]
       - map: [ "enum.HumanoidVisualLayers.Underwear" ]
       - map: [ "enum.HumanoidVisualLayers.Undershirt" ]
+      - map: [ "enum.HumanoidVisualLayers.UndergarmentBottom" ]
+      - map: [ "enum.HumanoidVisualLayers.UndergarmentTop" ]
       - shader: StencilClear
         sprite: Mobs/Species/Human/parts.rsi
         state: l_leg
