--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/moth.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/moth.yml
@@ -51,6 +51,8 @@
       visible: false
     - map: [ "enum.HumanoidVisualLayers.Underwear" ]
     - map: [ "enum.HumanoidVisualLayers.Undershirt" ]
+    - map: [ "enum.HumanoidVisualLayers.UndergarmentBottom" ]
+    - map: [ "enum.HumanoidVisualLayers.UndergarmentTop" ]
     - map: [ "jumpsuit" ]
     - map: [ "enum.HumanoidVisualLayers.LHand" ]
     - map: [ "enum.HumanoidVisualLayers.RHand" ]
