--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/rodentia.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/rodentia.yml
@@ -35,6 +35,8 @@
       - map: [ "enum.HumanoidVisualLayers.LLeg" ]
       - map: [ "enum.HumanoidVisualLayers.Undershirt" ]
       - map: [ "enum.HumanoidVisualLayers.Underwear" ]
+      - map: [ "enum.HumanoidVisualLayers.UndergarmentBottom" ]
+      - map: [ "enum.HumanoidVisualLayers.UndergarmentTop" ]
       - map: [ "jumpsuit" ]
       - map: [ "enum.HumanoidVisualLayers.LHand" ]
       - map: [ "enum.HumanoidVisualLayers.RHand" ]
