--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Belt/belts.yml
@@ -344,6 +344,9 @@
       - Pill
       - RMCLighter
   - type: FixedItemSizeStorage
+  - type: Tag
+    tags:
+    - RMCBeltMedical
 
 - type: entity
   parent: CMBeltBaseStorage
@@ -1442,3 +1445,6 @@
 
 - type: Tag
   id: RMCNailgunHolster
+
+- type: Tag
+  id: RMCBeltMedical
