--- a/Resources/Prototypes/_RMC14/Entities/Objects/Medical/pill_canisters.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Medical/pill_canisters.yml
@@ -78,7 +78,11 @@
     - suitstorage
   - type: RMCStorageEjectHand
     state: Last
-
+    canToggleStorage: false
+    ejectWhenEmpty: true
+    nestedWhitelist:
+      tags:
+      - RMCBeltMedical
   - type: RMCSmartFridgeInsertable
     category: Pills
 
