--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_tunnel.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_tunnel.yml
@@ -35,6 +35,7 @@
       enum.NameTunnelUI.Key:
         type: NameTunnelBui
   - type: DeletedByWeedKiller
+  - type: XenoFriendly
 
 - type: entity
   parent: XenoTunnel
