Add hidden identities between marines and xenos

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/feroxi.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/feroxi.yml
@@ -92,6 +92,8 @@
     animation: WeaponArcBite
   - type: Inventory
     speciesId: reptilian
+  - type: FixedIdentity
+    name: cm-chatsan-replacement-feroxi
 
 - type: entity
   parent: BaseSpeciesDummy
