--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/rodentia.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/rodentia.yml
@@ -93,6 +93,8 @@
       Unsexed: RMCMaleRodentia
   - type: Inventory
     speciesId: rodentia
+  - type: FixedIdentity
+    name: cm-chatsan-replacement-rodentia
 
 - type: entity
   save: false
