--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/arachnid.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/arachnid.yml
@@ -109,3 +109,5 @@
       sprite: _RMC14/Effects/targeted.rsi
       state: sniper_lockon_intense_direction
       visible: false
+  - type: FixedIdentity
+    name: cm-chatsan-replacement-arachnid
