--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/vulpkanin.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/vulpkanin.yml
@@ -101,6 +101,8 @@
         sprite: _RMC14/Effects/targeted.rsi
         state: sniper_lockon_intense_direction
         visible: false
+  - type: FixedIdentity
+    name: cm-chatsan-replacement-vulpkanin
 
 - type: entity
   parent: BaseSpeciesDummy
