--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/Hive/xeno_hive_core.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/Hive/xeno_hive_core.yml
@@ -1,6 +1,6 @@
 - type: entity
-  id: HiveCoreXeno
   parent: BaseHiveStructure
+  id: HiveCoreXeno
   name: hive core
   description: A giant pulsating mound of mass. It looks very much alive.
   components:
@@ -83,6 +83,8 @@
   - type: RMCAlternateSprite
     normalSprite: _RMC14/Structures/Xenos/hive_structures.rsi
     alternateSprite: _RMC14/Structures/Xenos/hive_structures_old.rsi
+  - type: RMCMesonsNonviewable
+    xenoVisible: true
 
 - type: entity
   id: HiveCoreXenoConstructionNode
@@ -118,6 +120,8 @@
   - type: RMCAlternateSprite
     normalSprite: _RMC14/Structures/Xenos/hive_structures.rsi
     alternateSprite: _RMC14/Structures/Xenos/hive_structures_old.rsi
+  - type: RMCMesonsNonviewable
+    xenoVisible: true
 
 
 - type: entity
