ammo box, cargo crate
Adda 1984 HP ammo boxes to construction menu, makes them purchasable via req console

--- a/Resources/Prototypes/_RMC14/Catalog/Fills/Crates/magazine_boxes.yml
+++ b/Resources/Prototypes/_RMC14/Catalog/Fills/Crates/magazine_boxes.yml
@@ -122,6 +122,14 @@
     contents:
     - id: RMCBoxMagazinePistolM1984AP
 
+- type: entity
+  parent: RMCCrateAmmo
+  id: RMCCrateBoxMagazinePistolM1984HP
+  name: Magazine box (M1984, 16x HP mags)
+  components:
+  - type: StorageFill
+    contents:
+    - id: RMCBoxMagazinePistolM1984HP
 # M77
 - type: entity
   parent: RMCCrateAmmo
